remove function added, css key frames and clear the input buttom when it submmit

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <div class ="todo1">
 
-      <input class="inp">
+      <input class="inp" type="text" id ="val" placeholder="Type your pending task">
       <button class="buttonPlus">+</button>
       <button class="buttonMinus">-</button>
 
