refactor to typescript

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
       rel="stylesheet"
     />
-    <script src="./js/index.js" async></script>
+    <script src="./dist/index.js" async></script>
   </head>
   <body>
     <div class="header-container">
@@ -32,7 +32,6 @@
       </div>
       <div class="containerInput" id="container-buttons">
         <button class="button-header" id="buttonPlus">+</button>
-        <button class="button-header" id="buttonMinus">-</button>
       </div>
     </div>
 
